# http-api-data

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  README  README.md  Setup.lhs  cabal.haskell-ci  cabal.make-travis-yml  http-api-data.cabal  path-pieces.cabal  stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
Web/: HttpApiData.hs  PathPieces.hs
Web/HttpApiData/: Internal.hs
Web/HttpApiData/Internal/: FormUrlEncoded.hs  HttpApiData.hs
Web/PathPieces/: Internal.hs
src/Web/: FormUrlEncoded.hs  HttpApiData.hs
src/Web/HttpApiData/: Internal.hs
src/Web/HttpApiData/Internal/: FormUrlEncoded.hs  HttpApiData.hs
src/Web/Internal/: FormUrlEncoded.hs  HttpApiData.hs
test/: DocTest.hs  DocTest.hsc  Spec.hs  main.hs
test/Web/HttpApiData/Internal/: FormUrlEncodedSpec.hs  HttpApiDataSpec.hs  TestInstances.hs
test/Web/Internal/: FormUrlEncodedSpec.hs  HttpApiDataSpec.hs  TestInstances.hs
