cabal-version:   >= 1.10
name:            http-api-data
version:         0.3.9

synopsis:        Converting to/from HTTP API data like URL pieces, headers and query parameters.
category:        Web
description:
  This package defines typeclasses used for converting Haskell data types to and from HTTP API data.
  .
  Please see README.md

license:         BSD3
license-file:    LICENSE
author:          Nickolay Kudasov <nickolay.kudasov@gmail.com>
maintainer:      Nickolay Kudasov <nickolay.kudasov@gmail.com>
homepage:        http://github.com/fizruk/http-api-data
stability:       unstable
build-type:      Custom

extra-source-files:
  include/overlapping-compat.h
  test/*.hs
  CHANGELOG.md
  README.md
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.3,
  GHC==8.6.1

custom-setup
  setup-depends:
    base,
    Cabal,
    cabal-doctest >=1.0.6 && <1.1

flag use-text-show
  description: Use text-show library for efficient ToHttpApiData implementations.
  default: False
  manual: True

library
    hs-source-dirs: src/
    include-dirs:   include/

    -- GHC bundled
    build-depends:   base                  >= 4.7      && < 4.13
                   , bytestring            >= 0.10.4.0 && < 0.11
                   , containers            >= 0.5.5.1  && < 0.7
                   , text                  >= 1.2.3.0  && < 1.3
                   , time                  >= 1.4.2    && < 1.9

    -- other-dependencies
    build-depends:
                     attoparsec            >= 0.13.2.2 && < 0.14
                   , attoparsec-iso8601    >= 1.0.0.0  && < 1.1
                   , cookie                >= 0.4.3    && < 0.4.5
                   , hashable              >= 1.2.7.0  && < 1.3
                   , http-types            >= 0.12.1   && < 0.13
                   , time-locale-compat    >= 0.1.1.5  && < 0.2
                   , unordered-containers  >= 0.2.9.0  && < 0.3
                   , uuid-types            >= 1.0.3    && <1.1

    if !impl(ghc >= 8.0)
      build-depends: semigroups            >= 0.18.5   && < 0.19

    if flag(use-text-show)
      cpp-options: -DUSE_TEXT_SHOW
      build-depends: text-show        >= 3.7.4 && <3.8

    exposed-modules:
      Web.HttpApiData
      Web.FormUrlEncoded
      Web.Internal.FormUrlEncoded
      Web.Internal.HttpApiData
    ghc-options:     -Wall
    default-language: Haskell2010

test-suite spec
    type:          exitcode-stdio-1.0
    main-is:       Spec.hs
    other-modules:
      Web.Internal.FormUrlEncodedSpec
      Web.Internal.HttpApiDataSpec
      Web.Internal.TestInstances
    hs-source-dirs: test
    ghc-options:   -Wall
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover >= 2.5.5 && <2.6
    -- inherited  depndencies
    build-depends:
                     base
                   , bytestring
                   , unordered-containers
                   , http-api-data
                   , text
                   , time
                   , bytestring
                   , uuid-types
                   , cookie

    build-depends:   HUnit                >= 1.6.0.0 && <1.7
                   , hspec                >= 2.5.5   && <2.6
                   , QuickCheck           >= 2.11.3  && <2.13
                   , quickcheck-instances >= 0.3.19  && <0.4

test-suite doctests
  ghc-options:      -Wall
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.16.0 && <0.17,
    filepath
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          doctests.hs
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/fizruk/http-api-data
