name:            path-pieces
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Components of paths.
description:    Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/path-pieces>.
category:        Web, Yesod
stability:       unstable
cabal-version:   >= 1.8
build-type:      Simple
extra-source-files:
  test/main.hs
  ChangeLog.md
  README.md

library
    build-depends:   base             >= 4       && < 5
                   , text             >= 0.5
                   , time
    exposed-modules: Web.PathPieces
    ghc-options:     -Wall

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       main.hs
    hs-source-dirs: test
    ghc-options:   -Wall
    build-depends:   HUnit
                   , hspec >= 1.3
                   , base >= 4 && < 5
                   , QuickCheck
                   , path-pieces
                   , text

source-repository head
  type:     git
  location: https://github.com/yesodweb/path-pieces
